# sdg-15-1-1

./: .gitignore  .gitmodules  .pre-commit-config.yaml  15_1_1.R  README.md  SDG15_1_1_Analysis.ipynb  SDG15_1_1_Calculate.ipynb  SDG_15_1_1.py  SDG_15_1_1_scratch.ipynb  pyproject.toml  sdg1511.py  sdg1511final.py  sdg_15_1_1_2023.py  user_params.py
.github/workflows/: tests.yml
.ipynb_checkpoints/: type_hinting-checkpoint.ipynb  type_hinting-checkpoint.py
src/SDG15_1_1/: __init__.py  folder_map.py  main.py  sdg_15_1_1.py  sdg_base.py  test_sdg_base.ipynb
src/sdg_15_1_1_src/: __init__.py  sdg_15_1_1.py
tests/: __init__.py  sdg_base_tests.py
