[project]
name = "sdg_15_1_1"
authors = [
    {name="Lucy Astley-Jones"},
    {name="Ed Cuss"},
]
description = "A script for the SDG 15.1.1 Forest Area data"
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.1"
dependencies = [
    "geopandas == 0.13.2",
    "matplotlib == 3.2.2",
    "numexpr==2.7.3",
    "numpy == 1.20.3",
    "openpyxl > 3.0.7",
    "pandas == 2.0.3",
    "python-dotenv",
    "shapely == 1.7.1",
    "tqdm",
    "typing"
]

[project.optional-dependencies]
lint = [
    "black<24",
    "ruff",
]
dev = [
    "sdg_15_1_1_src[lint]",
]

[tool.black]
line-length = 79

[tool.ruff]
extend-select = ["I", "W"]
line-length = 79
